<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.matchandtrade</groupId>
	<artifactId>mat-web</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>matchandtrade-webservice</name>
	<description>Match and Trade REST Web Service</description>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://github.com/rafasantos/matchandtrade/blob/master/LICENSE.txt</url>
			<comments>Open source, can distribute, can modify, cannot hold liable, provided "as is"</comments>
		</license>
	</licenses>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.4.1.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<!-- Plugin and dependency versions -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<com.h2database.version>1.4.192</com.h2database.version>
		<org.apache.httpcomponents.httpclient>4.5.2</org.apache.httpcomponents.httpclient>
		<io.springfox.version>2.6.0</io.springfox.version>
		<cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
	</properties>
	
	<dependencies>
		<!-- Spring Boot -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-hateoas</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jersey</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<!-- Logging -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-logging</artifactId>
		</dependency>

		<!-- H2 Database -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${com.h2database.version}</version>
			<scope>runtime</scope>
		</dependency>
		
		<!-- Apache HttpComponents -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${org.apache.httpcomponents.httpclient}</version>
		</dependency>

		<!-- Swagger -->
		<dependency>
		    <groupId>io.springfox</groupId>
		    <artifactId>springfox-swagger2</artifactId>
		    <version>${io.springfox.version}</version>
		</dependency>
		<dependency>
		    <groupId>io.springfox</groupId>
		    <artifactId>springfox-swagger-ui</artifactId>
		    <version>${io.springfox.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<useTestClasspath>true</useTestClasspath>
				</configuration>
			</plugin>
			
			<!-- Unit Tests will test classes ending in *UT-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<threadCount>4</threadCount>
					<excludes>
						<exclude>**/*Suite.java</exclude>
					</excludes>
					<includes>
						<include>**/*UT.java</include>
					</includes>
					<!-- -Xverify:none may reduce startup time. No need to verify bitecode on the test phase -->
					<argLine>-Xverify:none</argLine>
				</configuration>
			</plugin>

			<!-- Integration Tests will test classes ending in *Suite* -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<parallel>suites</parallel>
					<threadCount>4</threadCount>
					<excludes>
						<exclude>**/*Test.java</exclude>
						<exclude>**/*UT.java</exclude>
					</excludes>
					<includes>
						<include>**/*Suite.java</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>${cobertura-maven-plugin.version}</version>
			</plugin>
		</plugins>
	</reporting>

</project>
